# zendesk-mcp-server

./: .env.example  GAPS.md  HANDOFF.md  ISSUES.md  README.md  oauth-implementation-plan-lean.md  oauth-spec-lean.md  oauth-spec.md  oauth-test-strategy-lean.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: ensure-zendesk-mcp.sh  restart-zendesk-mcp.sh
skills/zendesk-recovery/: SKILL.md
skills/zendesk-restart/: SKILL.md
specs/: HANDOFF-TEMPLATE.md  README.md  field-gaps.md
specs/connection-skill/: spec.md
specs/http-transport/: spec.md
specs/kb-search/: spec.md
specs/rule-dump/: spec.md
src/zendesk_mcp_server/: __init__.py  auth.py  callback_server.py  oauth.py  server.py  token_store.py  zendesk_client.py
tests/: conftest.py  test_auth.py  test_build_zendesk_client.py  test_callback_server.py  test_oauth.py  test_token_store.py  test_zendesk_client.py
