[project]
name = "zendesk-mcp-server"
version = "0.1.0"
description = "A simple Zendesk MCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.9.4",
    "uvicorn>=0.30",
    "starlette>=0.40",
    "python-dotenv>=1.0.1",
    "zenpy==2.0.56",
    "authlib>=1.7.0",
    "cachetools>=5.3",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
zendesk = "zendesk_mcp_server:main"
zendesk-auth = "zendesk_mcp_server.auth:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-mock",
    "responses",
]
